--- a/jc-client-app/src/alljobs-view.html
+++ b/jc-client-app/src/alljobs-view.html
@@ -1,9 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="lodash.html">
 <link rel="import" href="shared-styles.html">
+<link rel="import" href="lodash.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 
 <dom-module id="alljobs-view">
   <template>
@@ -14,44 +12,56 @@
         padding: 10px;
       }
     </style>
+    <iron-ajax  auto id="allJobsAjax" method="get" url="http://localhost:9090/allJobs" handle-as="json"  content-type="application/json" on-response="_handleAllJobsResponse" debounce-duration="300"></iron-ajax>
 
     <div class="card">
       <h1>All Jobs</h1>
-      <span class='error-message'>{{error}}</span>
-      <paper-input label="Email" type="email" value="{{userInput.email}}"></paper-input>
-      <paper-input label="Password" type="password" value="{{userInput.password}}"></paper-input>
-      <paper-button raised on-tap="_performLogin">Login</paper-button>
-      <iron-ajax  id="loginAjax" method="post" url="http://localhost:9090/login" handle-as="json"  content-type="application/json" on-response="_handleLoginResponse" debounce-duration="300" method="post"></iron-ajax>
+      <p>        
+        <table class="table-responsive">
+          <caption>Open Job listings.</caption>
+          <thead>
+            <tr>
+              <th>Job Code</th>
+              <th>Job Heading</th>
+              <th>Job Required Skills</th>
+              <th>Recruiter</th>
+              <th>Location</th>              
+            </tr>
+          </thead>
+          <tbody>
+            <template is="dom-repeat" items="{{allJobs}}">          
+              <tr>
+                <td>[[item.jobCode]]</td>
+                <td>[[item.heading]]</td>
+                <td width="40%">[[item.skillsDesc]]</td>
+                <td>[[item.recruiter.email]]</td>
+                <td>[[item.jobLocation.city]]</td>
+              </tr>
+            </template>
+          </tbody>
+        </table>
+        <ul>
+          
+        </ul>        
+      </p>
     </div>
   </template>
 
   <script>
     Polymer({
       is: 'alljobs-view',
-      properties: {
-        userInput: Object,
-        user: {
-          type: Object,
-          notify: true,
-          readOnly: false
-        },
-        error: String
-      },
-      ready: function() {
-        this.userInput = {};
-      },
-      _performLogin: function() {
-         var loginAjax = this.$.loginAjax;
-         loginAjax.body = JSON.stringify(this.userInput);
-         loginAjax.generateRequest();
-      },
-
-      _handleLoginResponse: function(request){
+      _handleAllJobsResponse: function(request) {      
         var myResponse = request.detail.response;
         if (!_.isEmpty(myResponse.result)) {
-            this.set('user', myResponse.result);
-        } else if(!_.isEmpty(myResponse.error)) {
-            this.error = myResponse.error;
+            var allJobs = myResponse.result;
+            _.each(allJobs, function(job) {
+                job.skillsDesc = _.chain(job.weighedSkills).map(function(weighedSkill) {
+                  return _.startCase(weighedSkill.skill.toLowerCase());
+                }).reduce(function(sum, skillName) {
+                  return sum + ', ' + skillName;
+                }).value();
+            });
+            this.set('allJobs', myResponse.result);
         }
       }
     });
