--- a/jc-client-app/src/alljobs-view.html
+++ b/jc-client-app/src/alljobs-view.html
@@ -17,7 +17,7 @@
     <div class="card">
       <h1>All Jobs</h1>
       <p>        
-        <table class="table-responsive">
+        <table>
           <caption>Open Job listings.</caption>
           <thead>
             <tr>
