--- a/jc-client-app/src/jobcenter-app.html
+++ b/jc-client-app/src/jobcenter-app.html
@@ -92,10 +92,10 @@
             role="main">
           <login-view name="login" user="{{loggedInUser}}"></login-view>
           <register-view name="register"></register-view>
-          <alljobs-view name="alljobs" user="{{loggedInUser}}"></alljobs-view>
-          <appliedjobs-view name="appliedjobs" user="{{loggedInUser}}"></appliedjobs-view>
-          <interviews-view name="interviews" user="{{loggedInUser}}"></interviews-view>
-          <results-view name="results" user="{{loggedInUser}}"></results-view>
+          <alljobs-view name="alljobs" user="[[loggedInUser]]"></alljobs-view>
+          <appliedjobs-view name="appliedjobs" user="[[loggedInUser]]"></appliedjobs-view>
+          <interviews-view name="interviews" user="[[loggedInUser]]"></interviews-view>
+          <results-view name="results" user="[[loggedInUser]]"></results-view>
           <no-view name="no"></no-view>
         </iron-pages>
       </app-header-layout>
