--- a/jc-client-app/src/results-view.html
+++ b/jc-client-app/src/results-view.html
@@ -18,7 +18,7 @@
       <h1>Candidate Interview Results</h1>
       <p>
         <strong>Algorithm for score</strong>
-        Hight score candidate is the best ranked candidate for job.
+        Highest score candidate is the best ranked candidate for job.
         <br>
         Each Skill Score = Skill Weight(W) * (average Skill Rating(R) by Interviewers)
         <br>
