--- a/jc-client-app/src/register-view.html
+++ b/jc-client-app/src/register-view.html
@@ -17,7 +17,7 @@
       <h1>Registeration TODO.</h1>
       <p>        
         <table>
-          <caption>Use the below system created users from Database to login.</caption>
+          <caption>Use the below system created users for login.</caption>
           <thead>
             <tr>
               <th>email</th>
