--- a/jc-client-app/src/appliedjobs-view.html
+++ b/jc-client-app/src/appliedjobs-view.html
@@ -12,7 +12,7 @@
         padding: 10px;
       }
     </style>
-    <iron-ajax  auto id="myAppliedJobsAjax" method="get" url="http://localhost:9090/myAppliedJobs" handle-as="json" body="[[user]]" content-type="application/json" on-response="_handleResponse" debounce-duration="300"></iron-ajax>
+    <iron-ajax  auto id="myAppliedJobsAjax" method="post" url="http://localhost:9090/myAppliedJobs" handle-as="json" body="[[user]]" content-type="application/json" on-response="_handleResponse" debounce-duration="300"></iron-ajax>
 
     <div class="card">
       <h1>My Applied Jobs</h1>
